# TI-Toolbox

./: .bandit  .codecov.yml  .coverage  .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GPU_ACCELERATION.md  GUI.sh  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY.md  TODO.md  WINDOWS_FIXES.md  benchmark_config.yaml  codecov.yml  docker-compose.yml  feed.xml  flex-search.sh  index.html  loader.py  loader.sh  package-lock.json  pre-process.sh  pyproject.toml  pytest.ini  robots.txt  serve.sh  simulator.sh  simulator_patch.txt  sitemap.xml  text.txt  version.py
.circleci/: README_CIRCLECI.md  config.yml  fix_coverage_paths.py
.github/: pull_request_template.md
.playwright-mcp/: page-2026-06-23T22-45-51-113Z.yml  page-2026-06-23T22-48-30-442Z.yml  page-2026-06-23T22-52-13-581Z.yml
CLI/: GUI.sh  README.md  analyzer.sh  classifier.sh  ex-search.sh  extact.txt  flex-search.sh  group_analyzer.sh  movea.sh  pre-process.sh  simulator.sh
GUI/: acknowledgments_tab.py  analyzer_tab.py  classifier_tab.py  confirmation_dialog.py  contact_tab.py  electrode_placement_gui.py  ex_search_tab.py  flex_search_tab.py  help_tab.py  main.py  movea_tab.py  nifti_viewer_tab.py  optimize_tab.py  pre_process_tab.py  report_generator.py  requirements-gui.txt  settings_menu.py  simulation_report_generator.py  simulator_tab.py  system_monitor_tab.py  utils.py  version.py
MOVEA/: README.md  leadfield_generator.py  leadfield_script.py  montage_formatter.py  optimizer.py  utils.py  visualizer.py
Paper_info/: paper.txt  paper_example1.txt  paper_example2.txt  results_example.txt
about/: index.html
analyzer/: README.md  compare_analyses.py  csv_group_comparator.py  group_analyzer.py  main_analyzer.py  mesh_analyzer.py  test.py  visualizer.py  voxel_analyzer.py
classifier/: ATLAS_VALIDATION_README.md  PLOTTING_README.md  README.md  __init__.py  check_environment.py  cli.py  example_plotting.py  requirements.txt  sample_data.csv  ti_classifier.py  ti_classifier_cli.py  verify_atlases.py
configs/: analyzer_config.json  entrypoint_config.json  flex_config.json  sim_config.json
dev/: freesurfer-volume-versioning.md  visualize_skin_region_margin.py
development/: docker-compose.yml  thoughts.md
docs/: .gitignore  CNAME  GUI.md  Gemfile  PIPELINE_FLOW.md  README.md  TICSC_2.0.drawio  _config.yml  about.md  atlas_resampling.md  build-api.sh  build-docs.sh  documentation.md  downloads.md  ex.md  index.md  installation.md  new_structure.txt  releases.md  (+2 more)
(+1414 files in other folders)
