[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI/distribution name. Repo/app name stays "ti-toolbox", but the Python package is "tit".
name = "tit"
description = "TI-Toolbox (Python package: tit)"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
# NEURON powers the optional tit.microscale (field -> neuron) coupling. It is
# imported lazily, so the rest of the package works without it installed.
dependencies = ["neuron"]

[project.urls]
Repository = "https://github.com/idossha/TI-toolbox"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tit*"]

[tool.setuptools.dynamic]
version = {attr = "tit.__version__"}


